--- a/packages/whatsapp_webhook/files/package.json
+++ b/packages/whatsapp_webhook/files/package.json
@@ -18,7 +18,7 @@
     "express": "^4.18.2",
     "query-string": "^9.0.0",
     "serverless-http": "^3.2.0",
-    "amazir_data_model": "file:../../../shared_modules/models"
+    "amazir_data_model": "file:../../shared_modules/models"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
