updated workflow actions

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev src/app.ts",
     "start": "tsc && node dist/app.js",
-    "script:upload": "ts-node-dev src/scripts/upload.ts"
+    "script:upload": "ts-node-dev src/scripts/upload.ts",
+    "script:start-workflow": "ts-node-dev src/scripts/start-workflow.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
