--- a/packages/shared_modules/models/tsconfig.json
+++ b/packages/shared_modules/models/tsconfig.json
@@ -7,8 +7,8 @@
     "skipLibCheck": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    // "declaration": true,
-    // "declarationMap": true,
+    "declaration": true,
+    "declarationMap": true,
     "sourceMap": true
   },
   "exclude": ["src/type", "types"]
