--- a/packages/shared_modules/workflow/package.json
+++ b/packages/shared_modules/workflow/package.json
@@ -1,13 +1,13 @@
 {
   "name": "amaziri_workflow",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js"
   },
-  "license": "MIT",
+  "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.12",
     "typescript": "^5.4.5"
