--- a/packages/shared_modules/models/tsconfig.json
+++ b/packages/shared_modules/models/tsconfig.json
@@ -11,5 +11,5 @@
     "declarationMap": true,
     "sourceMap": true
   },
-  "exclude": ["src/type", "types"]
+  "exclude": ["src/type", "types", "dist"]
 }
