removed directive from server and schema
moved workflow validation to resolver level

--- a/packages/shared_modules/models/package.json
+++ b/packages/shared_modules/models/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "amaziri_workflow": "file:../workflow"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
