--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,26 +13,34 @@
     "@apollo/server": "^4.10.4",
     "@aws-sdk/client-s3": "^3.577.0",
     "@aws-sdk/s3-request-presigner": "^3.577.0",
+    "@graphql-tools/schema": "^10.0.4",
     "@langchain/community": "^0.0.57",
     "@langchain/mongodb": "^0.0.1",
     "@langchain/openai": "^0.0.29",
+    "amazir_data_model": "file:../shared_modules/models",
+    "amaziri_workflow": "file:../shared_modules/workflow",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "firebase": "^10.7.0",
     "firebase-admin": "^11.11.1",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
     "langchain": "^0.1.37",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "pdf-parse": "^1.1.1",
     "uuid": "^9.0.1",
-    "amazir_data_model": "file:../shared_modules/models",
-    "amaziri_workflow": "file:../shared_modules/workflow"
+    "ws": "^8.17.0"
   },
   "resolutions": {
     "@langchain/core": "~0.1.56"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.12.11",
+    "@types/ws": "^8.5.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
