--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,6 +25,7 @@
     "firebase": "^10.7.0",
     "firebase-admin": "^11.11.1",
     "graphql": "^16.8.1",
+    "graphql-mongodb-subscriptions": "^1.0.1",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.16.0",
     "langchain": "^0.1.37",
