modified workflow data and logic

--- a/packages/shared_modules/workflow/package.json
+++ b/packages/shared_modules/workflow/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "@langchain/mongodb": "^0.0.4",
     "@langchain/openai": "^0.2.2",
-    "amazir_data_model": "file:../models",
+    "agenda": "^5.0.0",
+    "amazir_data_model": "file:..\\models",
     "dotenv": "^16.4.5",
     "langchain": "^0.2.10",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "node-cron": "^3.0.3"
   },
   "resolutions": {
     "@langchain/core": "~0.1.56"
